# macshow

backend/: .gitignore  main.py  main.spec  pyproject.toml
backend/app/handlers/client/: image.py
backend/public/: index.html
backend/public/_nuxt/: 1NiQi3ZP.js  5spP6Te3.js  Ai0j2lJO.js  BA-Hta01.js  BDfid1_U.js  BEpc7-jZ.js  BGyFX1GM.js  BSKoqbYX.js  BpcGE0BU.js  BrRVguc8.js  ByeB8bl9.js  BzzUKFE_.js  CBMrz8BQ.js  CGYx1rhY.js  CGn3iFBw.js  CM6pwSHh.js  C_51ZNOb.js  CgeVLJQP.js  CuPjhnli.js  Cv7bq3Md.js  CxPtGPO6.js  CzjAmK2i.js  D4qUyFF7.js  DG-G6Us5.js  DIGUQGX0.js  DUMEk6q6.js  DYIBTMHE.js  D_1jQP7v.js  DtnbboDV.js  H9LBBMQr.js  Vs6Nc1yg.js  admin.BdIdlICO.css  assist.CMi9B7ZL.css  base.BytRUwS2.css  c778oxBV.js  check.DPwsxePp.css  dKEAdEx4.js  el-button.5KadzEQv.css  el-input.CmuHb8HS.css  el-overlay.BixSApLT.css  (+15 more)
backend/public/_nuxt/builds/: latest.json
backend/public/_nuxt/builds/meta/: effeb640-0c49-419a-b105-311d58eae2ec.json
backend/public/admin/login/: index.html
backend/public/check/: index.html
frontend/: package.json  pnpm-lock.yaml  test.txt
frontend/app/pages/: check.vue
