[project]
name = "xx"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "dicom2jpg>=0.1.10",
    "fastapi[all]>=0.116.1",
    "funasr>=1.2.7",
    "httpx>=0.28.1",
    "huggingface-hub>=0.34.5",
    "invoke>=2.2.0",
    "modelscope>=1.30.0",
    "pillow>=11.3.0",
    "pyinstaller>=6.16.0",
    "python-dotenv>=1.1.1",
    "torch>=2.8.0",
    "torchaudio>=2.8.0",
    "torchvision>=0.23.0",
    "transformers>=4.56.1",
]
